manifests/bootstrap/dev/nginx/demoapp.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoapp
  namespace: nginx
  labels:
    app.kubernetes.io/name: demoapp
    app.kubernetes.io/instance: demoapp
    app.kubernetes.io/version: alpine3.21-perl
spec:
  ports:
  - name: demoappport
    port: 8080 
  selector:
    app.kubernetes.io/name: demoapp
    app.kubernetes.io/instance: demoapp
    app.kubernetes.io/version: alpine3.21-perl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: demoapp
      app.kubernetes.io/instance: demoapp
      app.kubernetes.io/version: alpine3.21-perl
      microservice-type: webapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: demoapp
      labels:
        app.kubernetes.io/name: demoapp
        app.kubernetes.io/instance: demoapp
        app.kubernetes.io/version: alpine3.21-perl
        microservice-type: webapp
        azure.workload.identity/use: "true"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        supplementalGroups: [1001]
      containers:
      - name: demoapp
        image: ghcr.io/nginx/nginx-unprivileged:alpine3.21-perl
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        resources:
          limits:
            cpu: 100m
            memory:  128Mi
          requests:
            cpu: 50m
            memory:  100Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
