manifests/bootstrap/dev/nginx/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: nginx
spec:
  description: "Block all the traffic (except DNS) by default. Allow traffic from cluster."
  endpointSelector:
    matchLabels:
      {}
  ingress:
    - fromEntities:
        - host
        - remote-node
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
